# Antiope

./: .gitignore  README.md  copy-natives.sh  jitpack.yml  pom.xml
.github/workflows/: maven-publish.yml
examples/: ActivityExample.java  DownloadNativeLibrary.java  FriendNotificationExample.java  RelationshipExample.java
src/main/c/: CMakeLists.txt  Callback.c  EventHandler.c  EventHandler.h  com_wynntils_antiope_ActivityManager.c  com_wynntils_antiope_ActivityManager.h  com_wynntils_antiope_Core.c  com_wynntils_antiope_Core.h  com_wynntils_antiope_CreateParams.c  com_wynntils_antiope_CreateParams.h  com_wynntils_antiope_DiscordGameSDKCore.c  com_wynntils_antiope_DiscordGameSDKCore.h  com_wynntils_antiope_OverlayManager.c  com_wynntils_antiope_OverlayManager.h  com_wynntils_antiope_activity_Activity.c  com_wynntils_antiope_activity_Activity.h  com_wynntils_antiope_activity_ActivityAssets.c  com_wynntils_antiope_activity_ActivityAssets.h  com_wynntils_antiope_activity_ActivityParty.c  com_wynntils_antiope_activity_ActivityParty.h  com_wynntils_antiope_activity_ActivityPartySize.c  com_wynntils_antiope_activity_ActivityPartySize.h  com_wynntils_antiope_activity_ActivitySecrets.c  com_wynntils_antiope_activity_ActivitySecrets.h  com_wynntils_antiope_activity_ActivityTimestamps.c  com_wynntils_antiope_activity_ActivityTimestamps.h  com_wynntils_antiope_core_DiscordGameSDKCore.c  com_wynntils_antiope_core_DiscordGameSDKCore.h  com_wynntils_antiope_core_type_CreateParams.c  com_wynntils_antiope_core_type_CreateParams.h  com_wynntils_antiope_manager_activity_ActivityManager.c  com_wynntils_antiope_manager_activity_ActivityManager.h  com_wynntils_antiope_manager_activity_type_Activity.c  com_wynntils_antiope_manager_activity_type_Activity.h  com_wynntils_antiope_manager_activity_type_ActivityAssets.c  com_wynntils_antiope_manager_activity_type_ActivityAssets.h  com_wynntils_antiope_manager_activity_type_ActivityParty.c  com_wynntils_antiope_manager_activity_type_ActivityParty.h  com_wynntils_antiope_manager_activity_type_ActivityPartySize.c  com_wynntils_antiope_manager_activity_type_ActivityPartySize.h  (+8 more)
src/main/java/com/wynntils/antiope/: ActivityManager.java  Core.java  CoreClosedException.java  CreateParams.java  DiscordEventAdapter.java  DiscordEventHandler.java  DiscordUtils.java  GameSDKException.java  LogLevel.java  OverlayManager.java  Result.java  test.java
src/main/java/de/jcm/discordgamesdk/: ActivityManager.java  Core.java  CoreClosedException.java  CreateParams.java  DiscordEventAdapter.java  DiscordEventHandler.java  DiscordUtils.java  GameSDKException.java  LogLevel.java  OverlayManager.java  Result.java  (+3 more)
toolchains/: macos-aarch64.cmake  macos-amd64.cmake  windows-amd64.cmake  windows-x86.cmake
(+54 files in other folders)
